<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <Button
        android:id="@+id/mapsPlusButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/minus_button"
        android:clickable="true"
        android:focusable="true" />

    <RelativeLayout
        android:id="@+id/helperOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" >

            <TextView
                android:id="@+id/helperTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helperTitle"
                android:textSize="35sp"
                android:fontFamily="@font/savate"
                android:textColor="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/helperStep1Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helperMapsStep1Desc"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/helperTitle"/>

            <TextView
                android:id="@+id/helperStep2Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helperMapsStep2Desc"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/helperStep1Desc"/>

            <TextView
                android:id="@+id/helperStep3Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helperMapsStep3Desc"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/helperStep2Desc"/>

            <TextView
                android:id="@+id/helperStep4Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helperMapsStep4Desc"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/helperStep3Desc"/>

            <TextView
                android:id="@+id/helperStep5Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helperMapsStep5Desc"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/helperStep4Desc"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helperMapsStep6Desc"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/helperStep5Desc"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mapsLayoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/mapsPlusButton"
        android:orientation="vertical">

    <Button
        android:id="@+id/helpButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/help_button_dark"
        android:clickable="true"
        android:focusable="true" />

        <Button
            android:id="@+id/userProfileButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/user_button"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:id="@+id/mapsHomeButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/home_button"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</RelativeLayout>