<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_app" />

    <ImageView
        android:id="@+id/screenTitle"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:scaleType="centerInside"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="0dp"
        android:src="@drawable/bg_title_mode" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonBalade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round_button_shadow"
            android:padding="17dp"
            android:text="SCANNER"
            android:textSize="20dp" />

        <Button
            android:id="@+id/buttonExplorateur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round_button_shadow"
            android:padding="17dp"
            android:text="JOUER"
            android:textSize="20dp" />

        <Button
            android:id="@+id/buttonSieste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:background="@drawable/round_button_shadow"
            android:padding="17dp"
            android:text="Ma Galerie"
            android:visibility="visible"
            android:textSize="20dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/helperOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" >

            <TextView
                android:id="@+id/helperTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helperTitle"
                android:textSize="35sp"
                android:fontFamily="@font/savate"
                android:textColor="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/helperStep1Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helperMainMenuStep1Title"
                android:textSize="25sp"
                android:fontFamily="@font/savate"
                android:textColor="@color/white"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/helperTitle"/>

            <TextView
                android:id="@+id/helperStep1Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helperMainMenuStep1Desc"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/helperStep1Title"/>

            <TextView
                android:id="@+id/helperStep2Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helperMainMenuStep2Title"
                android:textSize="25sp"
                android:fontFamily="@font/savate"
                android:textColor="@color/white"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/helperStep1Desc"/>

            <TextView
                android:id="@+id/helperStep2Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helperMainMenuStep2Desc"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/helperStep2Title"/>

            <TextView
                android:id="@+id/helperStep3Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helperMainMenuStep3Title"
                android:textSize="25sp"
                android:fontFamily="@font/savate"
                android:textColor="@color/white"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/helperStep2Desc"/>

            <TextView
                android:id="@+id/helperStep3Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helperMainMenuStep3Desc"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/helperStep3Title"/>
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/helpButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:background="@drawable/help_button_dark"
        android:clickable="true"
        android:focusable="true" />


</RelativeLayout>