<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArtistCardActivity">

    <include
        layout="@layout/activity_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="661dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/round_artwork_card"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TitreFiche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="85dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/font_title"
            android:text="Titre Oeuvre"
            android:textColor="@color/textColor"
            android:textSize="35sp"
            android:visibility="invisible" />

        <ScrollView
            android:id="@+id/scrollView_artistCardActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TitreFiche"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:visibility="invisible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageOeuvre"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="21dp"
                    android:layout_marginBottom="20dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/menu2" />

                <TextView
                    android:id="@+id/AproposOeuvre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageOeuvre"
                    android:fontFamily="@font/text_font"
                    android:text="@string/AproposOeuvre"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/DescriptionOeuvre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/AproposOeuvre"
                    android:layout_marginTop="20sp"
                    android:text="@string/exemple"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/AproposArtiste"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/DescriptionOeuvre"
                    android:layout_marginTop="20sp"
                    android:fontFamily="@font/text_font"
                    android:text="@string/aProposArtiste"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/DescriptionArtiste"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/AproposArtiste"
                    android:layout_marginTop="20sp"
                    android:text="@string/exemple"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/DescriptionArtiste"
                    android:orientation="horizontal"
                    android:paddingHorizontal="3dp">

                    <ImageButton
                        android:id="@+id/FacebookButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="20sp"
                        android:background="@drawable/icon_facebook" />

                    <ImageButton
                        android:id="@+id/InstagramButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="20sp"
                        android:layout_toRightOf="@id/FacebookButton"
                        android:background="@drawable/icon_instagram" />

                    <ImageButton
                        android:id="@+id/TwitterButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="20sp"
                        android:layout_toRightOf="@id/InstagramButton"
                        android:background="@drawable/icon_twitter" />

                    <ImageButton
                        android:id="@+id/WebsiteButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="20sp"
                        android:layout_toRightOf="@id/TwitterButton"
                        android:background="@drawable/icon_website" />

                    <ImageButton
                        android:id="@+id/YoutubeButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="20sp"
                        android:layout_toRightOf="@id/WebsiteButton"
                        android:background="@drawable/icon_youtube" />

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>
    </RelativeLayout>


    <Button
        android:id="@+id/closeFicheButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="576dp"
        android:background="@drawable/round_button"
        android:clickable="true"
        android:focusable="true"
        app:elevation="5dp"
        app:srcCompat="@color/colorPrimary" />

</RelativeLayout>